# sms-gateway-server

./: .env.example  README.md  pyproject.toml
app/: main.py
app/core/: config.py  db.py
