[project]
name = "sms-gateway-server"
version = "0.1.0"
description = ""
authors = [
    {name = "baymyradow",email = "baymyradov.mekanx@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
